--- a/leakcanary-android/build.gradle
+++ b/leakcanary-android/build.gradle
@@ -31,6 +31,10 @@ android {
     buildConfigField "String", "GIT_SHA", "\"${gitSha()}\""
     consumerProguardFiles 'consumer-proguard-rules.pro'
   }
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_7
+    targetCompatibility JavaVersion.VERSION_1_7
+  }
 }
 
 task sourceJar(type: Jar) {
@@ -38,4 +42,3 @@ task sourceJar(type: Jar) {
 }
 
 apply from: rootProject.file('gradle/checkstyle.gradle')
-apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
